--- a/style.css
+++ b/style.css
@@ -60,12 +60,14 @@ body {
     display: flex;
 }
 .content img {
-    width: 300px;
-    height: auto;
+    width: auto;
+    height: 250px;
 }
+
 .content-text {
     margin: 2px;
     margin-left: 15px;
+    margin-top: -10px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1.2em;
     text-align: left;
